tests/lean/550.lean.expected.out
550.lean:3:2-3:6: error: unsolved goals
x : Nat
h : ∀ (x : Nat), x + 1 = x.succ
⊢ (x + 1).succ = 1 + (x + 1)
